--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,17 +1,21 @@
 
 spring:
   datasource:
+#    url: jdbc:tc:mysql:8.0.36:///hhplus  # ✅ 테스트컨테이너용 특수 JDBC URL
+#    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:mysql://localhost:3306/hhplus?characterEncoding=UTF-8&serverTimezone=UTC
-    username: soon
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
     password: alstjsl1!
   jpa:
     open-in-view: false
     generate-ddl: false
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
+        format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
