--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,81 @@
-version: '3'
+version: '3.8'
+
 services:
-  mysql:
-    image: mysql:8.0
+  redis-master:
+    image: redis:7.2
+    container_name: redis-master
     ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=soon
-      - MYSQL_PASSWORD=alstjsl1!
-      - MYSQL_DATABASE=hhplus
+      - "6379:6379"
+    command: redis-server --appendonly yes
+    networks:
+      - redis-net
+  redis-slave1:
+    image: redis:7.2
+    container_name: redis-slave1
+    ports:
+      - "6381:6379"
+    command: redis-server --replicaof redis-master 6379
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
+  redis-slave2:
+    image: redis:7.2
+    container_name: redis-slave2
+    ports:
+      - "6382:6379"
+    command: redis-server --replicaof redis-master 6379
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
+  redis-slave3:
+    image: redis:7.2
+    container_name: redis-slave3
+    ports:
+      - "6383:6379"
+    command: redis-server --replicaof redis-master 6379
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
+  sentinel1:
+    image: redis:7.2
+    container_name: redis-sentinel1
+    ports:
+      - "26379:26379"
+    command: redis-sentinel /etc/redis/sentinel.conf
     volumes:
-      - ./data/mysql/:/var/lib/mysql
+      - ./sentinel.conf:/etc/redis/sentinel.conf
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
+  sentinel2:
+    image: redis:7.2
+    container_name: redis-sentinel2
+    ports:
+      - "26380:26379"
+    command: redis-sentinel /etc/redis/sentinel.conf
+    volumes:
+      - ./sentinel.conf:/etc/redis/sentinel.conf
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
+  sentinel3:
+    image: redis:7.2
+    container_name: redis-sentinel3
+    ports:
+      - "26381:26379"
+    command: redis-sentinel /etc/redis/sentinel.conf
+    volumes:
+      - ./sentinel.conf:/etc/redis/sentinel.conf
+    depends_on:
+      - redis-master
+    networks:
+      - redis-net
 
 networks:
-  default:
+  redis-net:
     driver: bridge
