--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   sql:
     init:
       mode: always
-#      data-locations: classpath:data.sql
+      data-locations: classpath:data.sql
 
   jpa:
     defer-datasource-initialization: true
